--- a/forward_UQ/exercises/EasyVVUQ_FabSim3/EasyVVUQ_Fabsim.ipynb
+++ b/forward_UQ/exercises/EasyVVUQ_FabSim3/EasyVVUQ_Fabsim.ipynb
@@ -420,7 +420,7 @@
    "source": [
     "We are now ready to submit the ensemble, in this case to `localhost`. The command `fab.run_uq_ensemble` submits the ensemble to the (remote) host for execution. Under the hood it uses the FabSim3 `campaign2ensemble` subroutine to copy the run directories from the EasyVVUQ `WORK_DIR` to the FabSim3 `SWEEP` directory, located in `plugins/FabUQCampaign/config_files/ade_school/SWEEP`. From there the ensemble will be sent to the (remote) host.\n",
     "\n",
-    "**Note**: if you get some type of ssh error, you might have to ssh into the (remote) machine once via the command line be"
+    "**Note**: if you get some type of ssh error, you might have to ssh into the (remote) machine once via the command line before executing `run_uq_ensemble`."
    ]
   },
   {
