--- a/forward_UQ/exercises/EasyVVUQ/EasyVVUQ_setup.ipynb
+++ b/forward_UQ/exercises/EasyVVUQ/EasyVVUQ_setup.ipynb
@@ -193,9 +193,7 @@
     }
    ],
    "source": [
-    "vary = {'Pe' : cp.Uniform(0.9 * params['Pe']['default'], 1.1 * params['Pe']['default']),\n",
-    "        'f' :  cp.Uniform(0.9 * params['f']['default'], 1.1 * params['f']['default'])}\n",
-    "vary"
+    "vary = "
    ]
   },
   {
@@ -230,9 +228,7 @@
    },
    "outputs": [],
    "source": [
-    "encoder = uq.encoders.GenericEncoder(template_fname='advection_diffusion_model/input.template',\n",
-    "                                     delimiter='$',\n",
-    "                                     target_filename='input.json')"
+    "encoder = uq.encoders.GenericEncoder(...)"
    ]
   },
   {
@@ -256,7 +252,8 @@
    },
    "outputs": [],
    "source": [
-    "execute = ExecuteLocal('python {}/advection_diffusion_model/advection_diffusion.py'.format(HOME))"
+    "cmd = \n",
+    "execute = ExecuteLocal(cmd)"
    ]
   },
   {
@@ -613,8 +610,7 @@
    },
    "outputs": [],
    "source": [
-    "decoder = uq.decoders.SimpleCSV(target_filename='output.csv', \n",
-    "                                output_columns=['u'])"
+    "decoder = uq.decoders.SimpleCSV(...)"
    ]
   },
   {
@@ -1428,17 +1424,7 @@
     }
    ],
    "source": [
-    "mean = results.describe(qoi = 'u', statistic = 'mean')\n",
-    "std = results.describe(qoi = 'u', statistic = 'std')\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111, xlabel='x', ylabel = 'u')\n",
-    "ax.plot(xx, mean, color='dodgerblue', label='mean')\n",
-    "ax.plot(xx, mean + std, '--', color='dodgerblue', label='mean +/ std')\n",
-    "ax.plot(xx, mean - std, '--', color='dodgerblue')\n",
-    "plt.legend(frameon = False)\n",
-    "plt.tight_layout()\n",
-    "plt.tight_layout()"
+    "mean = "
    ]
   },
   {
@@ -1476,25 +1462,7 @@
    ],
    "source": [
     "surrogate = results.surrogate()\n",
-    "\n",
-    "random_inputs = {}\n",
-    "n_samples = 1000\n",
-    "for param in vary.keys():\n",
-    "    random_inputs[param] = vary[param].sample(n_samples)\n",
-    "\n",
-    "u_surrogate = surrogate(random_inputs)\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111, xlabel='x', ylabel = 'u')\n",
-    "ax.plot(xx, np.array(u_surrogate['u']).T, color='dodgerblue', alpha=0.8, label='surrogate')\n",
-    "ax.plot(xx, code_samples.T, color='salmon', label='code')\n",
-    "\n",
-    "# legend, but remove duplicate labels\n",
-    "handles, labels = plt.gca().get_legend_handles_labels()\n",
-    "by_label = dict(zip(labels, handles))\n",
-    "plt.legend(by_label.values(), by_label.keys())\n",
-    "\n",
-    "plt.tight_layout()"
+    "\n"
    ]
   },
   {
@@ -1529,16 +1497,7 @@
     }
    ],
    "source": [
-    "sobols_first = results.sobols_first()\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111, xlabel='x', ylabel = 'u')\n",
-    "\n",
-    "for param in vary:\n",
-    "    ax.plot(xx, sobols_first['u'][param], label=param)\n",
-    "\n",
-    "plt.legend(frameon = False)\n",
-    "plt.tight_layout()"
+    "sobols_first = results.sobols_first()\n"
    ]
   },
   {
