First version of Dummy Tutorial.

--- a/ensembles/exercises/FabDummy/FabDummy.ipynb
+++ b/ensembles/exercises/FabDummy/FabDummy.ipynb
@@ -82,7 +82,7 @@
    "outputs": [],
    "source": [
     "# FabSim3 arguments\n",
-    "ARGUMENTS = 'dummy_test'\n",
+    "ARGUMENTS = 'dummy_test,cores=1'\n",
     "# machine to run ensemble on\n",
     "MACHINE = \"localhost\""
    ]
@@ -115,7 +115,9 @@
    "id": "4bb3fa16-1f52-4328-880f-30e37a81c64f",
    "metadata": {},
    "source": [
-    "We are now ready to submit the ensemble, in this case to `localhost`. The command `fab.fabsim()` can be used to run any FabSim3 command. It takes three arguments:\n",
+    "Using FabSim3 through the API is very similar to using it over the command line. However, one important difference is that standard output (stdout) will _not_ be shown in a notebook environment, but standard error (stderr) output will be shown. In addition, the API contains a few extra shorthand functions to make life easier for you.\n",
+    "\n",
+    "In general, we are now ready to perform a test, in this case to `localhost`. The command `fab.fabsim()` can be used to run any FabSim3 command. It takes three arguments:\n",
     "\n",
     "* command: the name of the Fabsim3 command you seek to use.\n",
     "* arguments: a string containing the arguments of the command as you would type them on the command line.\n",
@@ -123,7 +125,7 @@
     "\n",
     "**Note**: if you get some type of ssh error, you might have to ssh into the (remote) machine once via the command line before executing `fab.fabsim`.\n",
     "\n",
-    "We now proceed to run a single dummy job, using the `dummy` command."
+    "To run a single dummy job, using the `dummy` command, you simply write the following:"
    ]
   },
   {
@@ -138,7 +140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Executing fabsim localhost dummy:dummy_test\n"
+      "Executing fabsim localhost dummy:dummy_test,cores=1\n"
      ]
     }
    ],
@@ -183,30 +185,12 @@
    "id": "a3b33249-fbd8-4749-b3db-85916567704a",
    "metadata": {},
    "source": [
-    "`fab.verify` will execute the `verify_last_ensemble` subroutine to see if the output file `target_filename` (`output.csv` in our case) for each run in the `SWEEP` directory is present in the corresponding FabSim3 results directory. Returns a boolean flag. `fab.verify` will also call the FabSim `fetch_results` method, which actually retrieves the results from the (remote) host. \n",
-    "\n",
-    "So, if you want to just get the results without verifying the presence of output files, call `fab.fetch_results(machine=MACHINE)` instead. However, if something went wrong on the (remote) host, this will cause an error later on since not all required output files will be transfered on the EasyVVUQ `WORK_DIR`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "01570899-10cb-4d14-8dca-b86e7e04cc32",
-   "metadata": {},
-   "source": [
-    "`fab.get_uq_samples` copies the samples from the (local) FabSim results directory to the (local) EasyVVUQ campaign directory. It will not delete the results from the FabSim results directory. If you want to save space, you can delete the results on the FabSim side (see `results` directory in your FabSim home directory). You can also call `fab.clear_results(machine, name_results_dir)` to remove a specific FabSim results directory on a given machine."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4c4911db-8a5f-4f6c-ab1d-994d09c61e45",
-   "metadata": {},
-   "source": [
-    "Once all output files are copied to the EasyVVUQ run directories, we no longer need the (now duplicate) results in the FabSim3 directory. You can remove these via the command below, once you change the path from my FabSim3 directory to yours."
+    "To get the results without verifying the presence of output files, call `fab.fetch_results(machine=MACHINE)`. You can also call `fab.clear_results(machine, name_results_dir)` to remove a specific FabSim results directory on a given machine."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "9724b102-02b4-4fc8-b6ef-acc5070f00a2",
    "metadata": {},
    "outputs": [
@@ -214,22 +198,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Executing fabsim archer2 clear_results:/work/e723/e723/edeling/FabSim/\n"
+      "Executing fabsim localhost fetch_results\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fab.fetch_results(\"localhost\")\n",
+    "\n",
+    "# clear results in Fabsim directory, change path to your FabSim3 directory\n",
+    "# fab.clear_results(\"localhost\", '/home/wouter/FabSim3/results/')  # localhost\n",
+    "# fab.clear_results(\"archer2\", '/work/e723/e723/edeling/FabSim/')  # archer2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f052acc-c8b6-4edb-a9fd-83f4481d4c46",
+   "metadata": {},
+   "source": [
+    "## Visualising output\n",
+    "\n",
+    "The built-in fetch_results function above retrieves the output of the job you've submitted, and it will have added a directory named `dummy_test_localhost_1` in your FabSim3 results folder.\n",
+    "\n",
+    "To print the contents of the out.txt file within that directory, we've added a simple print function, which you can run as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e5d18dbf-a612-42d9-a96b-1941e4a09cc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing fabsim localhost print_dummy_output:dummy_test_localhost_1\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/wouter/anaconda3/lib/python3.9/site-packages/paramiko/transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
-      "  \"class\": algorithms.Blowfish,\n"
+      "File Content:\n",
+      " This dummy test has been concluded with great success.\n",
+      "Tue  8 Oct 09:42:37 BST 2024\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# clear results in Fabsim directory, change path to your FabSim3 directory\n",
-    "fab.clear_results(\"localhost\", '/home/wouter/FabSim3/results/')  # localhost\n",
-    "# fab.clear_results(\"archer2\", '/work/e723/e723/edeling/FabSim/')  # archer2"
+    "fab.fabsim('print_dummy_output','dummy_test_localhost_1','localhost')"
    ]
   },
   {
