Added ensemble code and exercises to tutorial.

--- a/ensembles/exercises/FabDummy/FabDummy.ipynb
+++ b/ensembles/exercises/FabDummy/FabDummy.ipynb
@@ -262,6 +262,109 @@
   },
   {
    "cell_type": "markdown",
+   "id": "216873f8-cca5-464f-9c78-114d40fb7d67",
+   "metadata": {},
+   "source": [
+    "## Running an ensemble of dummies\n",
+    "\n",
+    "Hopefully you have been able to run the job above, and print its output, without too much difficulty. In this next part we will explain how to run ensembles using FabSim3.\n",
+    "\n",
+    "If you look at the input files for the `dummy_test` configuration (viewable online here: https://github.com/djgroen/FabDummy/tree/master/config_files/dummy_test) then you will find a `dummy.txt` file and a directory named `SWEEP`. \n",
+    "* When you were running the dummy job above, the `dummy.txt` file was used as input for the dummy printer.\n",
+    "* The `SWEEP/` directory however, contains input for every instance if you decide to run the configuration as an ensemble.\n",
+    "  * Each subdirectory in `SWEEP/` contains input files for one instance in the ensemble, while files in the main config directory (in this case `dummy.txt`) will be passed on as input for _all_ instances in the ensemble.\n",
+    " \n",
+    "To start an ensemble locally using these inputs, and without replicas, you can use the following command:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a472f2f6-ab4a-4c26-9a8b-74ba56e50cf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fab.fabsim('dummy_ensemble','dummy_test,cores=1','localhost')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30b5577e-c700-44cf-8031-556c78bd5fd3",
+   "metadata": {},
+   "source": [
+    "**Exercises**\n",
+    "* Can you add the commands below, which allow you to wait for completion, and then to fetch the results?\n",
+    "* When you fetch the results, have a look at your results directory too. Do you notice anything unusual about the structure of your run outputs?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e31f6742-6ede-4bdd-ad21-b2f9cb39e760",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c84f899-dabd-4d5a-a6a3-8cfdcbd85663",
+   "metadata": {},
+   "source": [
+    "**Exercise**\n",
+    "Now that the job is completed and the results are fetched, you will want to use the `print_dummy_output` mentioned above once more to print the output of specific dummy_test instances. However, you may notice that the structure of your results directory is a bit different now. \n",
+    "* Do you know what results path you need to use to print the output of the `d2` instance? (hint: your argument will be containing at least one '/' to denote a subpath if you get it to work correctly.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6b56633-23f1-46d2-90ef-3b528a61b16f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4c6cc4b-8439-4568-a344-d190a61995f2",
+   "metadata": {},
+   "source": [
+    "## Running an ensemble with replicas\n",
+    "\n",
+    "Now that you are able to run an ensemble, let's replicate all the instances 5 times! Fortunately this can be done quite easily, by adding the `replicas=5` argument to your dummy_ensemble argument. See the modified function below.\n",
+    "\n",
+    "(_Note:_ the `replicas=5` argument trick works for any ensemble execution function in FabSim3, not just `dummy_ensemble`.) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "594006b0-a647-4a8b-aec6-6b5661caa1a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fab.fabsim('dummy_ensemble','dummy_test,cores=1,replicas=5','localhost')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e304e65-1b5a-4559-9a0f-c01adc396f90",
+   "metadata": {},
+   "source": [
+    "**Last little exercise**\n",
+    "As above, add a function to wait for completion and one to fetch the results again. Look at the directory structure of your ensemble run results, and notice how different subdirectories with outputs have been created for each replica.\n",
+    "* Do you know what results path you need to use to print the output of the 4th replica of the `d3` instance of the ensemble?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ceb5dae-2d72-4dad-98ec-e0e330dff8ce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "54dffb38-5638-4815-960a-d85a2e359af9",
    "metadata": {},
    "source": [
