Removed references to ADE in FabDummy tutorial.

--- a/ensembles/exercises/FabDummy/FabDummy.ipynb
+++ b/ensembles/exercises/FabDummy/FabDummy.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "**machines_user.yml**\n",
     "\n",
-    "This file is located in `FabSim3/fabsim/deploy`. Open it. This is an important file that lets you configure your run environment for various machines, both your `localhost` as well as remote machines. My `localhost` machine is posted below. In yours, also add the last line that says `ade_exec_school`.\n",
+    "This file is located in `FabSim3/fabsim/deploy`. Open it. This is an important file that lets you configure your run environment for various machines, both your `localhost` as well as remote machines. My `localhost` machine is posted below.\n",
     "\n",
     "```python\n",
     "localhost:\n",
@@ -351,6 +351,7 @@
    "metadata": {},
    "source": [
     "**Last little exercise**\n",
+    "\n",
     "As above, add a function to wait for completion and one to fetch the results again. Look at the directory structure of your ensemble run results, and notice how different subdirectories with outputs have been created for each replica.\n",
     "* Do you know what results path you need to use to print the output of the 4th replica of the `d3` instance of the ensemble?"
    ]
@@ -372,7 +373,6 @@
     "\n",
     "If you have aquired access to Archer2, you can redo this exercise, except run the ensemble on Archer2 instead on your laptop. To do so you you will need to:\n",
     "\n",
-    "* Copy the advection-diffusion model to a location in Archer2. From within this path, you can do so via `scp -r advection_diffusion_model/ <username>@login.archer2.ac.uk:~/`, replacing `<username>` with your archer2 user name. This will copy `advection_diffusion_model/*` to your Archer2 home directory.\n",
     "* Configure Archer2 in your `machines_user.yml` file. My file is posted below. Copy it, replace the archer2 entry in your `machine_user.yml`, and modify where needed, replacing my username with yours, and my project (`e723`) with yours (`ta171`). Note that for larger models, this is also where you can request more than 1 compute node.\n",
     "\n",
     "```python\n",
@@ -384,7 +384,6 @@
     "  remote: \"archer2\"\n",
     "  job_wall_time: '0-00:10:00'\n",
     "  partition_name: \"standard\"\n",
-    "  ade_exec_school : \"/home/e723/e723/edeling/advection_diffusion_model/advection_diffusion.py\"\n",
     "  qos_name: \"short\"\n",
     "  runtime: 10\n",
     "  nodes: 1\n",
