--- a/ensembles/exercises/FabDummy/FabDummy.ipynb
+++ b/ensembles/exercises/FabDummy/FabDummy.ipynb
@@ -14,7 +14,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "84c26fdc-ba35-4c3a-9e96-a847bcae11e7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -142,6 +144,14 @@
      "text": [
       "Executing fabsim localhost dummy:dummy_test,cores=1\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wouter/anaconda3/lib/python3.9/site-packages/paramiko/transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "  \"class\": algorithms.Blowfish,\n"
+     ]
     }
    ],
    "source": [
@@ -192,13 +202,23 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "9724b102-02b4-4fc8-b6ef-acc5070f00a2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Executing fabsim localhost fetch_results\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wouter/anaconda3/lib/python3.9/site-packages/paramiko/transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "  \"class\": algorithms.Blowfish,\n"
      ]
     },
     {
@@ -234,9 +254,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e5d18dbf-a612-42d9-a96b-1941e4a09cc0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -249,9 +271,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/wouter/anaconda3/lib/python3.9/site-packages/paramiko/transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "  \"class\": algorithms.Blowfish,\n",
       "File Content:\n",
       " This dummy test has been concluded with great success.\n",
-      "Tue  8 Oct 09:42:37 BST 2024\n",
+      "wo  9 okt 2024 13:23:54 CEST\n",
       "\n"
      ]
     }
@@ -299,11 +323,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e31f6742-6ede-4bdd-ad21-b2f9cb39e760",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing fabsim localhost dummy_ensemble:dummy_test,cores=1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wouter/anaconda3/lib/python3.9/site-packages/paramiko/transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "  \"class\": algorithms.Blowfish,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing fabsim localhost fetch_results\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wouter/anaconda3/lib/python3.9/site-packages/paramiko/transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "  \"class\": algorithms.Blowfish,\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fab.fabsim('dummy_ensemble','dummy_test,cores=1','localhost')\n",
+    "fab.wait(machine=MACHINE)\n",
+    "fab.fetch_results(\"localhost\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -317,11 +388,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a6b56633-23f1-46d2-90ef-3b528a61b16f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing fabsim localhost print_dummy_output:dummy_test_localhost_1/RUNS/d2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wouter/anaconda3/lib/python3.9/site-packages/paramiko/transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "  \"class\": algorithms.Blowfish,\n",
+      "File Content:\n",
+      " This second dummy test has been concluded with spectacular success.\n",
+      "wo  9 okt 2024 14:50:30 CEST\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "fab.fabsim('print_dummy_output', 'dummy_test_localhost_1/RUNS/d2', 'localhost')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -337,10 +432,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "594006b0-a647-4a8b-aec6-6b5661caa1a2",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing fabsim localhost dummy_ensemble:dummy_test,cores=1,replicas=5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wouter/anaconda3/lib/python3.9/site-packages/paramiko/transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "  \"class\": algorithms.Blowfish,\n"
+     ]
+    }
+   ],
    "source": [
     "fab.fabsim('dummy_ensemble','dummy_test,cores=1,replicas=5','localhost')"
    ]
@@ -423,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
